app/less/posting.less
.Posting {
	font-family: var(--font-content);
	font-size: 1.1rem;
	letter-spacing: -0.0075em;

	h1, h2, h3,
	h4, h5, h6 {
		text-rendering: geometricPrecision;
		margin-top: .83em;
		margin-bottom: .41em;

		font-family: var(--font-content-title);
	}

	h1 {
		font-size: 2rem;
		text-indent: -3px;
	}

	h2 {
		font-size: 1.8rem;
	}

	h3 {
		font-size: 1.75rem;
	}

	h4 {
		font-size: 1.6rem;
	}

	h5 {
		font-size: 1.5rem;
	}

	h6 {
		font-size: 1.5rem;
	}

	a {
		color: var(--foreground-400_rgb);
		transition: color 0.3s ease;
	}

	a:hover {
		color: var(--grey-300_rgb);
	}

	p, ul, ol, dl {
		font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
		margin: 0 0 1.75em 0;
		text-rendering: geometricPrecision;
		line-height: 1.7rem;
	}

	ol, ul {
		padding-left: 3rem;
	}

	ol ol, ul ul,
	ul ol, ol ul {
		margin: 0 0 0.4em 0;
		padding-left: 2em;
	}

	dl dt {
		float: left;
		width: 20%;
		max-width: 180px;
		overflow: hidden;
		clear: left;
		text-align: right;
		text-overflow: ellipsis;
		white-space: nowrap;
		font-weight: 700;
		margin-bottom: 1em;
	}

	dl dd {
		margin-left: ~"calc(min(25%, 200px))";
		margin-bottom: 1em;
	}

	li {
		margin: 0.4em 0;
	}

	li li {
		margin: 0;
	}

	li > p:last-of-type {
		margin-bottom: 0;
	}

	hr {
		display: block;
		height: 1px;
		border: 0;
		border-top: var(--grey-700_rgb) 1px solid;
		margin: 1.5em 0;
		padding: 0;
	}

	blockquote {
		-moz-box-sizing: border-box;
		box-sizing: border-box;
		margin: 1.75rem 0;
		padding: 1rem 1.75rem;
		background: rgba(var(--grey-900), .02);
		border-left: var(--grey-300_rgb) 4px solid;
	}

	blockquote p {
		margin: 0.8em 0;
		font-style: italic;

		&:first-child {
			margin-top: 0;
		}

		&:last-child {
			margin-bottom: 0;
		}
	}

	blockquote small {
		display: inline-block;
		margin: 0.8em 0 0.8em 1.5em;
		font-size: 0.9em;
		color: var(--grey-700_rgb);
	}

	blockquote small:before { content: "\2014 \00A0"; }

	blockquote cite {
		font-weight: 700;
	}

	blockquote cite a { font-weight: normal; }

	mark {
		background-color: var(--yellow-800_rgb);
	}

	code, tt, kbd {
		display: inline-block;
		color: rgba(var(--grey-100));
		padding: 3px 5px;
		font-size: 0.9em;
		white-space: pre-wrap;
		background: rgba(var(--grey-050), .5);
		border-radius: 6px;
		word-break: break-all;
		word-break: break-word;
	}

	pre {
		-moz-box-sizing: border-box;
		box-sizing: border-box;
		width: 100%;
		padding: 10px;
		font-size: 0.9em;
		white-space: pre;
		overflow: auto;
		background: var(--grey-200_rgb);
		color: var(--grey-900_rgb);
	}

	pre code, pre tt {
		color: var(--grey-900_rgb);
		font-size: inherit;
		white-space: pre;
		background: transparent;
		border: none;
		padding: 0;
	}

	code, kbd, pre, samp {
		font-family: var(--font-code);
		font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
	}

	table {
		-moz-box-sizing: border-box;
		box-sizing: border-box;
		margin: 1.75em 0;
		width: 100%;
		max-width: 100%;
		background-color: transparent;
	}

	table th,
	table td {
		padding: 8px;
		line-height: 20px;
		text-align: left;
		vertical-align: top;
		border-top: var(--grey-800_rgb) 1px solid;
	}

	table th { color: var(--grey-050_rgb); }

	table caption + thead tr:first-child th,
	table caption + thead tr:first-child td,
	table colgroup + thead tr:first-child th,
	table colgroup + thead tr:first-child td,
	table thead:first-child tr:first-child th,
	table thead:first-child tr:first-child td {
		border-top: 0;
	}

	table tbody + tbody { border-top: var(--grey-800_rgb) 2px solid; }

	table table table { background-color: var(--grey-900_rgb); }

	table tbody > tr:nth-child(odd) > td,
	table tbody > tr:nth-child(odd) > th {
		background-color: rgba(var(--grey-900), .3);
	}

	table.plain tbody > tr:nth-child(odd) > td,
	table.plain tbody > tr:nth-child(odd) > th {
		background: transparent;
	}

	img {
		object-fit: contain;
		max-width: 100%;
		max-height: 500px;
	}

	iframe {
		max-width: 100%;
	}

	// Koenig features
	figure {
		margin: 20px 0;

		figcaption {
			text-align: center;
			font-size: 1rem;
		}
	}

	.kg-image-card {
		text-align: center;
	}

	.kg-width-wide, .kg-width-full {
		margin: 20px calc((70vw - 100%) / -2);
	}

	.kg-width-wide img, .kg-width-full img {
		max-width: 100%;
		width: 100%;
	}

	.kg-width-full img {
		max-height: 100vh;
	}

	.kg-bookmark-card {
		width: 100%;
		position: relative;
	}

	.kg-bookmark-container {
		display: flex;
		flex-wrap: wrap;
		flex-direction: row-reverse;
		color: currentColor;
		font-family: inherit;
		text-decoration: none;
		border: 1px solid rgba(var(--grey-050), 0.1);
	}

	.kg-bookmark-container:hover {
		text-decoration: none;
	}

	.kg-bookmark-content {
		flex-basis: 0;
		flex-grow: 999;
		padding: 20px;
		order: 1;
	}

	.kg-bookmark-title {
		font-weight: 600;
	}

	.kg-bookmark-metadata,
	.kg-bookmark-description {
		margin-top: .5em;
	}

	.kg-bookmark-metadata {
		align-items: center;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}

	.kg-bookmark-description {
		font-size: 1rem;
		line-height: 1.2rem;
		height: 2.4rem;
		overflow: hidden;
	}

	.kg-bookmark-icon {
		display: inline-block;
		width: 1em;
		height: 1em;
		vertical-align: middle;
		margin-right: .5em;
		margin-bottom: .05em;
	}

	.kg-bookmark-thumbnail {
		display: flex;
		flex-basis: 24rem;
		flex-grow: 1;
	}

	.kg-bookmark-thumbnail img {
		max-width: 100%;
		height: auto;
		vertical-align: bottom;
		object-fit: cover;
	}

	.kg-bookmark-author {
		white-space: nowrap;
		text-overflow: ellipsis;
		overflow: hidden;
	}

	.kg-bookmark-publisher {
		font-size: 1.1rem;
		vertical-align: middle;
	}

	.kg-gallery-container {
		display: flex;
		flex-direction: column;
		margin: 1.5em auto;
		max-width: 1040px;
		width: 100%;
	}

	.kg-gallery-row {
		display: flex;
		flex-direction: row;
		justify-content: center;
	}

	.kg-gallery-image img {
		display: block;
		margin: 0;
		width: 100%;
		height: 100%;
	}

	.kg-gallery-row:not(:first-of-type) {
		margin: 0.75em 0 0 0;
	}

	.kg-gallery-image:not(:first-of-type) {
		margin: 0 0 0 0.75em;
	}

	.kg-embed-card {
		position: relative;
		overflow: hidden;
		padding-top: 56.25%;
	}

	.kg-embed-card iframe,
	.kg-embed-card object,
	.kg-embed-card embed {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
	}

	div.code-toolbar > .toolbar {
		display: flex;

		.toolbar-item {
			display: inline-flex !important;
		}

		.toolbar-item button {
			border-radius: 0;
			transition: all .4s ease;

			&:hover {
				color: var(--grey-900_rgb);
			}
		}
	}

	pre[class*="language-"] {
		border-radius: 0;
		padding-top: 3.6rem;
		position: relative;

		&::before {
			content: attr(data-lang);
			position: absolute;
			top: 10px;
			left: 10px;
			color: var(--grey-700_rgb);
			font-family: var(--font-sans);
		}

		.line-numbers .line-numbers-rows {
			border: none;
		}

		&::selection, *::selection {
			background: var(--grey-900_rgb);
			color: var(--grey-050_rgb) !important;
		}
	}

	.katex .hangul_fallback, .katex .hangul-fallback,
	.katex .cjk_fallback, .katex .cjk-fallback {
		font-family: var(--font-code);
	}
}

@media (max-width: 1200px) {
	.Posting {
		.kg-width-wide, .kg-width-full {
			margin: 20px calc((100vw - 100%) / -2);
		}
	}
}

@media (min-width: 1300px) {
	.Posting {
		.kg-embed-card {
			padding: 0;
			width: 854px;
			height: 480px;
		}
	}
}

